--- a/base/templates/base/pricing.html
+++ b/base/templates/base/pricing.html
@@ -1,6 +1,11 @@
 {%extends 'base/main.html'%}
 
+<!--  changing title to PRicing when url is directed to pricing -->
+{%block titlename%}
+    <title> Pricing  </title>
+{%endblock titlename%}
 
+<!-- content of the pricing block -->
 {% block content %}
 
 <h1>Pricing Block</h1>
