--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -1,6 +1,19 @@
 {%extends 'base/main.html' %}
-
+{%block titlename%}
+    <title>Study Together</title>
+{%endblock titlename%}
 {%block content%}
 <h1> Home page </h1>
+<hr>
+<hr>
+<div>
+    {%for room in rooms%}
+        
+            <h1>{{room.id}} ---- <a href=" {% url 'rooms' room.id %} ">{{room.name}}</a></h1>
+
+        
+    {%endfor%}
+
+</div>
 
 {%endblock content%}
