--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -5,13 +5,18 @@
 {%block content%}
 <h1> Home page </h1>
 <hr>
+<h3><a href="{% url 'create-room'%}">Create a New Room</a></h3>
 <hr>
 <div>
-    {%for room in rooms%}
-        
-            <h1>{{room.id}} ---- <a href=" {% url 'rooms' room.id %} ">{{room.name}}</a></h1>
 
-        
+    {%for room in rooms%}
+            <span>@{{room.host.username}}</span>
+            
+            <h1> <a href=" {% url 'rooms' room.id %} ">{{room.name}}</a></h1>
+            <div>
+                {{room.topic.name}}
+            </div>
+            <hr>
     {%endfor%}
 
 </div>
