--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -12,6 +12,17 @@
     {%block titlename%}
             <!-- block to change the title of the page -->
     {%endblock titlename%}
+    <style>
+        .container{
+            display: flex;
+            /* justify-content: space-betwe/ss; */
+        }
+        .container .topic{
+            width: 20%;
+            height: auto;
+            
+        }
+    </style>
 </head>
 <body>
     {% include 'base/nav.html'%}
